// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video with data and a caption should render the amp video with a caption 1`] = `
<Context.Provider
  value={
    Object {
      "isUK": true,
      "origin": "http://localhost",
      "platform": "amp",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "copyrightHolder": "@twitterhandle",
                  "height": 549,
                  "locator": "e49c/test/a0b28560-50a9-11e9-8100-2defb9ff0749.jpg",
                  "originCode": "cpsdevpb",
                  "width": 976,
                },
                "type": "rawImage",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "caption",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "group of residents",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "group of residents",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "altText",
              },
            ],
          },
          "type": "image",
        },
        Object {
          "model": Object {
            "allowOffsiteEmbedding": false,
            "duration": "PT2H34M25S",
            "guidance": null,
            "isLive": false,
            "locator": "urn:bbc:pips:pid:p064nsyw",
          },
          "type": "rawVideo",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "This video shows Marks and Spencer CEO talking about the announcement earlier this morning",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "This video shows Marks and Spencer CEO talking about the announcement earlier this morning",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
          "type": "altText",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "Former embroider Pauline Clayton described the gift as \\"lovely\\"",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "Former embroider Pauline Clayton described the gift as \\"lovely\\"",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
          "type": "caption",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`Video with data and a caption should render the amp video without a caption 1`] = `
<Context.Provider
  value={
    Object {
      "isUK": true,
      "origin": "http://localhost",
      "platform": "amp",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "copyrightHolder": "@twitterhandle",
                  "height": 549,
                  "locator": "e49c/test/a0b28560-50a9-11e9-8100-2defb9ff0749.jpg",
                  "originCode": "cpsdevpb",
                  "width": 976,
                },
                "type": "rawImage",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "caption",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "group of residents",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "group of residents",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "altText",
              },
            ],
          },
          "type": "image",
        },
        Object {
          "model": Object {
            "allowOffsiteEmbedding": false,
            "duration": "PT2H34M25S",
            "guidance": null,
            "isLive": false,
            "locator": "urn:bbc:pips:pid:p064nsyw",
          },
          "type": "rawVideo",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "This video shows Marks and Spencer CEO talking about the announcement earlier this morning",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "This video shows Marks and Spencer CEO talking about the announcement earlier this morning",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
          "type": "altText",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`Video with data and a caption should render the video and caption 1`] = `
<Context.Provider
  value={
    Object {
      "isUK": true,
      "origin": "http://localhost",
      "platform": undefined,
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "copyrightHolder": "@twitterhandle",
                  "height": 549,
                  "locator": "e49c/test/a0b28560-50a9-11e9-8100-2defb9ff0749.jpg",
                  "originCode": "cpsdevpb",
                  "width": 976,
                },
                "type": "rawImage",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "caption",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "group of residents",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "group of residents",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "altText",
              },
            ],
          },
          "type": "image",
        },
        Object {
          "model": Object {
            "allowOffsiteEmbedding": false,
            "duration": "PT2H34M25S",
            "guidance": null,
            "isLive": false,
            "locator": "urn:bbc:pips:pid:p064nsyw",
          },
          "type": "rawVideo",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "This video shows Marks and Spencer CEO talking about the announcement earlier this morning",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "This video shows Marks and Spencer CEO talking about the announcement earlier this morning",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
          "type": "altText",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "Former embroider Pauline Clayton described the gift as \\"lovely\\"",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "Former embroider Pauline Clayton described the gift as \\"lovely\\"",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
          "type": "caption",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`Video with data and a caption should render the video without a caption 1`] = `
<Context.Provider
  value={
    Object {
      "isUK": true,
      "origin": "http://localhost",
      "platform": undefined,
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "copyrightHolder": "@twitterhandle",
                  "height": 549,
                  "locator": "e49c/test/a0b28560-50a9-11e9-8100-2defb9ff0749.jpg",
                  "originCode": "cpsdevpb",
                  "width": 976,
                },
                "type": "rawImage",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "The residents of Ligsalz8 believe they have found the answer to the expensive cost of renting in Munich",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "caption",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "group of residents",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "group of residents",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "altText",
              },
            ],
          },
          "type": "image",
        },
        Object {
          "model": Object {
            "allowOffsiteEmbedding": false,
            "duration": "PT2H34M25S",
            "guidance": null,
            "isLive": false,
            "locator": "urn:bbc:pips:pid:p064nsyw",
          },
          "type": "rawVideo",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "This video shows Marks and Spencer CEO talking about the announcement earlier this morning",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "This video shows Marks and Spencer CEO talking about the announcement earlier this morning",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
          "type": "altText",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`Video with data but no image should only render the video 1`] = `null`;

exports[`Video with data should render the important props in divs 1`] = `
<ForwardRef>
  <Video
    duration="299"
    imageLocator="/cpsprodpb/5BD5/production/_101690532_2.jpg"
    kind="clip"
    rawImageSrc="https://ichef.bbci.co.uk/news/640/cpsprodpb/5BD5/production/_101690532_2.jpg"
    versionID="p064nsz3"
    videoLocator="urn:bbc:pips:pid:p064nsyw"
  />
</ForwardRef>
`;

exports[`Video with no data should not render anything 1`] = `null`;
